# neotolis-texture-packer

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/cli/: CMakeLists.txt  cli_cmds.h  cli_durability_payload_fixture.c  cli_exact_contract.cmake  cli_exit.c  cli_exit.h  cli_file_io_payload_fixture.c  cli_inspect.c  cli_json_check.c  cli_manifest_schema_contract.cmake  cli_mutate.c  cli_mutate_anim.c  cli_mutate_atlas.c  cli_mutate_family.cmake  cli_mutate_internal.h  cli_mutate_source.c  cli_mutate_sprite.c  cli_mutate_target.c  cli_mutation_dry_run.cmake  cli_mutation_dry_run_families.cmake  cli_mutation_output_oom_contract.cmake  cli_out.c  cli_out.h  cli_out_contract_test.c  cli_pack.c  cli_pack_exit_matrix.cmake  cli_parity.cmake  cli_project.c  cli_run_expect.cmake  cli_validate.c  main.c  test_cli_exit.c  test_utf8_argv.c
apps/cli/testdata/: .gitattributes  anim-list-dry-run-error.expected.json  clean.ntpacker_project  collision.ntpacker_project  dup_target.ntpacker_project  dupspell.ntpacker_project  empty-folder.ntpacker_project  empty.ntpacker_project  file-io-error.expected.json  help.expected.json  help.expected.txt  inspect-clean.expected.json  inspect-index-fault.expected.json  longpaths.ntpacker_project  missing-source.ntpacker_project  mutation-durability-both.expected.json  mutation-durability-file.expected.json  mutation-durability-recovery.expected.json  mutation-error.expected.json  mutation-success.expected.json  pack-clean-dry.expected.json  parity.ntpacker_project  problems.ntpacker_project  v4_orphan.ntpacker_project  v5_orphan.ntpacker_project  validate-dup-target.expected.json  validate-problems.expected.json  version-manifest.expected.json
apps/cli/testdata/empty_sprites/: .keep
apps/gui/: CMakeLists.txt  build_packs.c  client_parity_manifest.c  client_parity_manifest.h  client_parity_real.cmake  client_parity_replay.c  gui_actions.c  gui_actions.h  gui_actions_dialogs.c  gui_actions_edits.c  gui_actions_internal.h  gui_actions_pack.c  gui_actions_preview.c  gui_actions_recovery.c  gui_bench.c  gui_bench.h  gui_bootstrap.c  gui_bootstrap.h  gui_canvas.c  gui_canvas.h  gui_canvas_internal.h  gui_canvas_resources.c  gui_crash.c  gui_crash.h  gui_defs.h  gui_history.c  gui_history.h  gui_left_layout.h  gui_log_file.c  gui_log_file.h  gui_pack.c  gui_pack.h  gui_pack_internal.h  gui_pack_jobs.c  gui_pack_preview.c  gui_parity.c  gui_parity.h  gui_paths.c  gui_paths.h  gui_project.c  (+43 more)
apps/gui/assets/icons/: ATTRIBUTION.md  regen_icons.py
apps/smoke/: CMakeLists.txt  main.c
packer/: CMakeLists.txt
packer/include/tp_core/: tp_arena.h  tp_build_worker.h  tp_cancel.h  tp_client_capability.h  tp_diff.h  tp_error.h  tp_export.h  tp_export_run.h  tp_fs.h  tp_id.h  tp_identity.h  tp_image.h  tp_input.h  tp_job.h  tp_journal.h  tp_model.h  tp_name_map.h  tp_names.h  tp_operation.h  tp_pack.h  tp_pack_hash.h  tp_pack_read.h  tp_pack_result_cache.h  tp_project.h  tp_project_lease.h  tp_project_migrate.h  tp_recovery.h  tp_scan.h  tp_selector.h  tp_session.h  tp_source_plan.h  tp_sprite_index.h  tp_srckey.h  tp_transaction.h  tp_transform.h  tp_utf8.h  tp_validate.h
packer/spike/c0/: C0-01-contract.md  C0-02-contract.md  C0-03-contract.md  C0-04-contract.md  CMakeLists.txt  upstream-issue-raw-lifetime.md
packer/spike/c0/include/tp_c0/: tp_c0_ack.h  tp_c0_authority.h  tp_c0_cache.h  tp_c0_error.h  tp_c0_id.h  (+10 more)
packer/spike/c0/src/: tp_c0_ack.c  tp_c0_authority.c  tp_c0_cache_mem.c  tp_c0_error.c  tp_c0_id.c  tp_c0_journal_frame.c  tp_c0_journal_recover.c  tp_c0_jw.h  tp_c0_legacy.c  tp_c0_lex.h  tp_c0_op_catalog.c  tp_c0_pack_super.c  tp_c0_path.c  tp_c0_raster.c  tp_c0_selector.c  tp_c0_semantic.c  tp_c0_srckey.c  tp_c0_stb_impl.c  tp_c0_txn_emit.h  tp_c0_txn_encode.c  tp_c0_txn_parse.c  tp_c0_txn_priv.h  tp_c0_txn_result.c  tp_c0_txn_util.c  tp_c0_txn_validate.c
packer/spike/c0/tests/: test_c0_ack.c  test_c0_authority.c  test_c0_cache.c  test_c0_error.c  test_c0_id.c  test_c0_journal.c  test_c0_legacy.c  test_c0_op.c  test_c0_pack_super.c  test_c0_path.c  test_c0_raster.c  test_c0_raster_decode.c  test_c0_shape_id.c  test_c0_srckey.c  test_c0_txn.c  tp_c0_exif_fixture.h  tp_c0_jpeg_fixture.h  tp_c0_png_write.h  tp_c0_test_util.h
packer/src/: tp_arena.c  tp_build_driver.c  tp_build_driver_internal.h  tp_build_proto.c  tp_build_proto_internal.h  tp_build_worker.c  tp_build_worker_internal.h  tp_build_worker_main.c  tp_client_capability.c  tp_diff_apply.c  tp_diff_capture.c  tp_diff_entity.c  tp_diff_internal.h  tp_encode_internal.h  tp_export.c  tp_export_defold.c  tp_export_json_neotolis.c  tp_export_png.c  tp_export_run.c  tp_fs_internal.c  tp_fs_internal.h  tp_fs_io.c  tp_fs_posix.c  tp_fs_win32.c  tp_hex.h  tp_history.c  tp_history_codec.c  tp_history_codec_internal.h  tp_history_codec_read.c  tp_id.c  tp_identity.c  tp_identity_internal.h  tp_identity_session.c  tp_idset.c  tp_idset_internal.h  tp_image.c  tp_image_priv.h  tp_input.c  tp_job.c  tp_job_owner_internal.h  (+107 more)
packer/tests/: CMakeLists.txt  test_arena.c  test_bench_support.c  test_build_driver_oracle.c  test_build_proto.c  test_build_worker.c  test_diff.c  test_export_defold.c  test_export_json.c  test_export_png.c  test_export_run.c  test_file_fingerprint.c  test_fs_win32_contract.c  test_history_codec_contract.c  test_history_semantics_contract.c  test_id.c  test_identity_id.c  test_identity_path.c  test_identity_session.c  test_image.c  test_input.c  test_job_input_token.c  test_job_owner.c  test_journal.c  test_journal_wire_contract.c  test_migrate.c  test_name_map.c  test_names.c  test_normalize.c  test_op_apply.c  test_operation.c  test_pack.c  test_pack_constraints.c  test_pack_input_hash.c  test_pack_read.c  test_pack_result_cache.c  test_predict.c  test_project.c  test_project_contract.c  test_project_generation_assert.c  (+37 more)
packer/tests/fixtures/: history_v1_collections_forward.hex  history_v1_collections_reverse.hex  history_v1_forward.hex  history_v1_reverse.hex  journal_v4_mixed.hex  project_v5_rich.golden
(+107 files in other folders)
